# pacman-apt-wrapper

./: .gitignore  LICENSE  README.md  pacman  pyproject.toml
.github/workflows/: ci.yml
docs/: compatibility.md  design.md  security.md
src/pacman_apt/: __init__.py  cli.py
tests/: test_cli.py  test_packaging.py
